// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<Button
  context="primary"
  disabled={false}
  isBlock={true}
  size="large"
  type="button"
>
  <button
    className="Button Button--context Button--context_primary Button--size Button--size_large Button--isBlock"
    context="primary"
    disabled={false}
    size="large"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</Button>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<Button
  context="neutral"
  disabled={false}
  isBlock={false}
  size="normal"
  type="button"
>
  <button
    className="Button Button--context Button--context_neutral Button--size Button--size_normal"
    context="neutral"
    disabled={false}
    size="normal"
    type="button"
  >
    Click me
  </button>
</Button>
`;
